objects/Medications__c.object
<CustomObject>
    <description>used for sdoc</description>
    <label>Medications</label>
    <nameField>
        <label>Medication</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Dose__c</fullName>
        <label>Dose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <label>Route</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SQ</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>INH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Medications</relationshipLabel>
        <relationshipName>Medications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TID</fullName>
                </value>
                <value>
                    <fullName>QHS</fullName>
                </value>
                <value>
                    <fullName>QD</fullName>
                </value>
                <value>
                    <fullName>BID</fullName>
                </value>
                <value>
                    <fullName>PRN</fullName>
                </value>
                <value>
                    <fullName>HS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medications__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medications</label>
        <referenceTo>Medications__c</referenceTo>
        <relationshipLabel>Medications</relationshipLabel>
        <relationshipName>Medications</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>